--- a/template/index.html
+++ b/template/index.html
@@ -266,7 +266,7 @@
   </section>
   <section id="contactForm" style="margin-top: 50px;">
   <h2>聯絡我們</h2>
-  <form action="/contact" method="POST">
+  <form action="https://formsubmit.co/a3017255@gmail.com" method="POST">
     <label for="name">您的姓名：</label>
     <input type="text" id="name" name="name" required><br><br>
 
